Added ability to see which friends authorized BattleScript to connect to their Facebook

--- a/client/assets/css/settings.css
+++ b/client/assets/css/settings.css
@@ -1,7 +1,7 @@
 .settings__title {
   padding: 12px;
   color: #fff;
-  background-color: #EB7F00;
+  background-color: #5B5354;
   font-size: 20px;
   font-weight: 400;
 }
