--- a/client/assets/css/newstyle.css
+++ b/client/assets/css/newstyle.css
@@ -285,6 +285,12 @@ button:focus {
   .grid--l .grid__item {
     margin-bottom: 0;
   }
+  .grid__item--20-l {
+    -webkit-box-flex: 0;
+    -webkit-flex: 0 0 20%;
+        -ms-flex: 0 0 20%;
+            flex: 0 0 20%;
+  }
   .grid__item--25-l {
     -webkit-box-flex: 0;
     -webkit-flex: 0 0 25%;
@@ -1269,4 +1275,16 @@ button:focus {
 
 .sel {
   width:214.4px;
+}
+
+.battleavatar {
+  max-width: 50px;
+  height: auto;
+  margin-bottom: -15px;
+}
+
+.friendavatar {
+  max-width: 50px;
+  height: auto;
+  margin-bottom: -15px;
 }
